Done with reviewers comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@407 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1577,6 +1577,24 @@
       reportNumber   = "ULB-TH-06-27",
       SLACcitation   = "%%CITATION = HEP-PH/0612275;%%",
 }
+
+@article{IDMnaturalness,
+	author         = "Barbieri, Riccardo and Hall, Lawrence J. and Rychkov,
+	Vyacheslav S.",
+	title          = "{Improved naturalness with a heavy Higgs: An Alternative
+	road to LHC physics}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "74",
+	pages          = "015007",
+	doi            = "10.1103/PhysRevD.74.015007",
+	year           = "2006",
+	eprint         = "hep-ph/0603188",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UCB-PTH-06-04, LBNL-59894",
+	SLACcitation   = "%%CITATION = HEP-PH/0603188;%%",
+}
+
 @article{Deshpande:1977rw,
       author         = "Deshpande, Nilendra G. and Ma, Ernest",
       title          = "{Pattern of Symmetry Breaking with Two Higgs Doublets}",
@@ -2726,4 +2744,268 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
       reportNumber   = "MCNET-14-12, CP3-14-48",
       SLACcitation   = "%%CITATION = ARXIV:1407.0281;%%",
 }
+
+@article{Hamaguchi:2014pja,
+	author         = "Hamaguchi, Koichi and Liew, Seng Pei and Moroi, Takeo and
+	Yamamoto, Yasuhiro",
+	title          = "{Isospin-Violating Dark Matter with Colored Mediators}",
+	journal        = "JHEP",
+	volume         = "1405",
+	pages          = "086",
+	doi            = "10.1007/JHEP05(2014)086",
+	year           = "2014",
+	eprint         = "1403.0324",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UT-14-7, IPMU-14-0045, UG-FT308-14, CAFPE178-14",
+	SLACcitation   = "%%CITATION = ARXIV:1403.0324;%%",
+}
+
+@article{Barducci:2014ila,
+	author         = "Barducci, Daniele and Belyaev, Alexander and Buchkremer,
+	Mathieu and Cacciapaglia, Giacomo and Deandrea, Aldo and
+	others",
+	title          = "{Framework for Model Independent Analyses of Multiple
+	Extra Quark Scenarios}",
+	journal        = "JHEP",
+	volume         = "1412",
+	pages          = "080",
+	doi            = "10.1007/JHEP12(2014)080",
+	year           = "2014",
+	eprint         = "1405.0737",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CP3-14-19, LYCEN-2014-04",
+	SLACcitation   = "%%CITATION = ARXIV:1405.0737;%%",
+}
+
+@misc{PGS,
+	title = {{PGS: simulation of a generic high-energy physics collider detector}},
+	howpublished = "\url{http://www.physics.ucdavis.edu/~conway/research/software/pgs/pgs4-general.htm}",
+	year = {2015}, 
+	note = "[Online; accessed 13-June-2015]"
+}
+
+@article{ScalarMultiplet,
+	author         = "Hambye, T. and Ling, F.-S. and Lopez Honorez, L. and
+	Rocher, J.",
+	title          = "{Scalar Multiplet Dark Matter}",
+	journal        = "JHEP",
+	volume         = "0907",
+	pages          = "090",
+	doi            = "10.1007/JHEP05(2010)066, 10.1088/1126-6708/2009/07/090",
+	year           = "2009",
+	eprint         = "0903.4010",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "ULB-TH-09-03, FTUAM-09-04",
+	SLACcitation   = "%%CITATION = ARXIV:0903.4010;%%",
+}
+
+@article{IDMnewviable,
+	author         = "Lopez Honorez, Laura and Yaguna, Carlos E.",
+	title          = "{A new viable region of the inert doublet model}",
+	journal        = "JCAP",
+	volume         = "1101",
+	pages          = "002",
+	doi            = "10.1088/1475-7516/2011/01/002",
+	year           = "2011",
+	eprint         = "1011.1411",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "ULB-TH-10-37",
+	SLACcitation   = "%%CITATION = ARXIV:1011.1411;%%",
+}
+
+@article{IDMgammalines,
+	author         = "Gustafsson, Michael and Lundstr{\"o}m, Erik and Bergstr{\"o}m,
+	Lars and Edsj{\"o}, Joakim",
+	title          = "{Significant Gamma Lines from Inert Higgs Dark Matter}",
+	journal        = "Phys.~Rev.~Lett.",
+	volume         = "99",
+	pages          = "041301",
+	doi            = "10.1103/PhysRevLett.99.041301",
+	year           = "2007",
+	eprint         = "astro-ph/0703512",
+	archivePrefix  = "arXiv",
+	primaryClass   = "astro-ph",
+	SLACcitation   = "%%CITATION = ASTRO-PH/0703512;%%",
+}
+
+@article{IDMnu1,
+	author         = "Agrawal, Prateek and Dolle, Ethan M. and Krenke,
+	Christopher A.",
+	title          = "{Signals of Inert Doublet Dark Matter in Neutrino
+	Telescopes}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "79",
+	pages          = "015015",
+	doi            = "10.1103/PhysRevD.79.015015",
+	year           = "2009",
+	eprint         = "0811.1798",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:0811.1798;%%",
+}
+@article{IDMnu2,
+	author         = "Andreas, Sarah and Tytgat, Michel H.G. and Swillens,
+	Quentin",
+	title          = "{Neutrinos from Inert Doublet Dark Matter}",
+	journal        = "JCAP",
+	volume         = "0904",
+	pages          = "004",
+	doi            = "10.1088/1475-7516/2009/04/004",
+	year           = "2009",
+	eprint         = "0901.1750",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "ULB-TH-09-02",
+	SLACcitation   = "%%CITATION = ARXIV:0901.1750;%%",
+}
+@article{IDMpos,
+	author         = "Nezri, Emmanuel and Tytgat, Michel H.G. and Vertongen,
+	Gilles",
+	title          = "{e+ and anti-p from inert doublet model dark matter}",
+	journal        = "JCAP",
+	volume         = "0904",
+	pages          = "014",
+	doi            = "10.1088/1475-7516/2009/04/014",
+	year           = "2009",
+	eprint         = "0901.2556",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "ULB-TH-08-40",
+	SLACcitation   = "%%CITATION = ARXIV:0901.2556;%%",
+}
+@article{IDMVIB,
+	author         = "Garcia-Cely, Camilo and Ibarra, Alejandro",
+	title          = "{Novel Gamma-ray Spectral Features in the Inert Doublet
+	Model}",
+	journal        = "JCAP",
+	volume         = "1309",
+	pages          = "025",
+	doi            = "10.1088/1475-7516/2013/09/025",
+	year           = "2013",
+	eprint         = "1306.4681",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1306.4681;%%",
+}
+
+%%%
+
+@article{IDMLEPII,
+	author         = "Lundstr{\"o}m, Erik and Gustafsson, Michael and Edsj{\"o},
+	Joakim",
+	title          = "{The Inert Doublet Model and LEP II Limits}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "79",
+	pages          = "035013",
+	doi            = "10.1103/PhysRevD.79.035013",
+	year           = "2009",
+	eprint         = "0810.3924",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:0810.3924;%%",
+}
+@article{IDMLHChinvfirst,
+	author         = "Cao, Qing-Hong and Ma, Ernest and Rajasekaran, G.",
+	title          = "{Observing the Dark Scalar Doublet and its Impact on the
+	Standard-Model Higgs Boson at Colliders}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "76",
+	pages          = "095011",
+	doi            = "10.1103/PhysRevD.76.095011",
+	year           = "2007",
+	eprint         = "0708.2939",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UCRHEP-T437",
+	SLACcitation   = "%%CITATION = ARXIV:0708.2939;%%",
+}
+@article{IDMdileptons1,
+	author         = "Dolle, Ethan and Miao, Xinyu and Su, Shufang and Thomas,
+	Brooks",
+	title          = "{Dilepton Signals in the Inert Doublet Model}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "81",
+	pages          = "035003",
+	doi            = "10.1103/PhysRevD.81.035003",
+	year           = "2010",
+	eprint         = "0909.3094",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:0909.3094;%%",
+}
+@article{IDMtrileptons,
+	author         = "Miao, Xinyu and Su, Shufang and Thomas, Brooks",
+	title          = "{Trilepton Signals in the Inert Doublet Model}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "82",
+	pages          = "035009",
+	doi            = "10.1103/PhysRevD.82.035009",
+	year           = "2010",
+	eprint         = "1005.0090",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1005.0090;%%",
+}
+@article{IDMhgaga1,
+	author         = "Arhrib, Abdesslam and Benbrik, Rachid and Gaur, Naveen",
+	title          = "{$H\to \gamma \gamma$ in Inert Higgs Doublet Model}",
+	journal        = "Phys.~Rev.~D",
+	volume         = "85",
+	pages          = "095021",
+	doi            = "10.1103/PhysRevD.85.095021",
+	year           = "2012",
+	eprint         = "1201.2644",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1201.2644;%%",
+}
+@article{IDMmultileptons,
+	author         = "Gustafsson, Michael and Rydbeck, Sara and Lopez-Honorez,
+	Laura and Lundstrom, Erik",
+	title          = "{Status of the Inert Doublet Model and the Role of
+	multileptons at the LHC}",
+	journal        = "Phys.Rev.",
+	volume         = "D86",
+	pages          = "075019",
+	doi            = "10.1103/PhysRevD.86.075019",
+	year           = "2012",
+	eprint         = "1206.6316",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "DESY-11-261, ULB-TH-12-08",
+	SLACcitation   = "%%CITATION = ARXIV:1206.6316;%%",
+}
+@article{IDMhgaga2,
+	author         = "Swiezewska, Bogumila and Krawczyk, Maria",
+	title          = "{Diphoton rate in the inert doublet model with a 125 GeV
+	Higgs boson}",
+	journal        = "Phys.Rev.",
+	number         = "3",
+	volume         = "D88",
+	pages          = "035019",
+	doi            = "10.1103/PhysRevD.88.035019",
+	year           = "2013",
+	eprint         = "1212.4100",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "IFT-9-2012",
+	SLACcitation   = "%%CITATION = ARXIV:1212.4100;%%",
+}
+@article{IDMdileptonsII,
+	author         = "Belanger, Genevieve and Dumont, Beranger and Goudelis,
+	Andreas and Herrmann, Bjorn and Kraml, Sabine and others",
+	title          = "{Dilepton constraints in the Inert Doublet Model from Run
+	1 of the LHC}",
+	year           = "2015",
+	eprint         = "1503.07367",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "LAPTH-015-15, CTPU-15-04, LPSC-15084",
+	SLACcitation   = "%%CITATION = ARXIV:1503.07367;%%",
+}
+
 
