--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -388,7 +388,8 @@ for these models as follows:
 
 \begin{itemize}
 \item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
-\item Assess the percentage of events that pass a condition of validity for the EFT approximation that only depends, and present results removing 
+\item Assess the percentage of events that pass a condition of validity for the EFT approximation that does not
+depend on a specific completion, and present results removing 
 of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside the raw EFT results.
 \end{itemize}
 
