--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -167,9 +167,9 @@ Figure~\ref{fig:monojet_scan_V_g} compares the shapes of the \MET distribution f
 Based on similar findings for different choices of
 \mMed and \mDM, we conclude that the shapes of
 kinematic distributions are not altered
-by coupling variations, neither for the on-shell Dark Matter production where $\mMed>2\mDM$,
-nor for the off-shell DM production where $\mMed<2\mDM$. Only the production cross sections change.
-Differences in kinematic distributions are expected only close to the transition region where both on-shell and off-shell decays occur.
+by coupling variations, neither for the on-shell mediator case where $\mMed>2\mDM$,
+nor for the off-shell case where $\mMed<2\mDM$. Only the production cross sections change.
+Differences in kinematic distributions are expected only close to the transition region between on-shell and off-shell mediators.
 
 \begin{figure*}
 \centering
@@ -188,7 +188,7 @@ Such heavy mediators, although inacessible by the LHC data, are interesting sinc
 The observed difference among the simplified models in the plot arises from the fact that the region of low invariant masses of the Dark Matter pair, $m_{\bar{\chiDM}\chiDM}$, is suppressed due to narrow Breit-Wigner peak that only probes a narrow window of parton distribution functions. For wider mediators, the low mass region is significantly enhanced by parton distribution functions at low Bjorken $x$, as illustrated in Fig.\,\ref{fig:monojet_mchichi}(a).
 This explains why the sample with the narrowest mediator in Fig.\,\ref{fig:monojet_narrow} is heavily suppressed in terms of production cross section and also gives different \MET shape.
 %In general, for such extreme parameter choices the EFT model should give the correct answer.
-Furthermore, Fig.\,\ref{fig:monojet_narrow} compares the vector model with 5~\tev mediator to the D5 EFT sample and reveals that the simplified models with larger mediator widths (e.g. for couplings of 1 where $\Gamma_{\rm{min}}/\mMed\sim0.5$) are the ones resembling the kinematics of contact interactions. This is because the production in the EFT model is always off-shell, i.e. no peak in the $m_{\bar{\chiDM}\chiDM}$ distribution is present.
+Furthermore, Fig.\,\ref{fig:monojet_narrow} compares the vector model with 5~\tev mediator to the D5 EFT sample and reveals that the simplified models with larger mediator widths (e.g. for couplings of 1 where $\Gamma_{\rm{min}}/\mMed\sim0.5$) are the ones resembling the kinematics of contact interactions. This reflects the fact that in an EFT there is no enhancement due to on-shell mediators, leading to a closer resemblance to an off-shell regime where no peak in the $m_{\bar{\chiDM}\chiDM}$ distribution is present.
 In case of narrow width mediators, e.g. $\Gamma_{\rm{min}}/\mMed\sim0.05$, even larger mediator masses need to be chosen in order to significantly suppress the peak in the $m_{\bar{\chiDM}\chiDM}$ distribution and reproduce the kinematic shapes of an EFT model. Figure\,\ref{fig:monojet_mchichi}(b) verifies that the choice of 10~\tev mediator mass is sufficient to achieve that.
 
 
@@ -255,7 +255,7 @@ may restrict \gq to a greater degree than
 
 For a fixed mediator mass \mMed and couplings, the Dark Matter mass falls into three regimes:
 \begin{itemize}
-\item[On-shell:] When $\Mmed \gg 2 \mDM$, most mediators are produced on-shell. The hardness of the ISR is set by \Mmed, and the kinematic distributions do not strongly depend on \mDM. This is illustrated in Fig.~\ref{fig:monojet_scan_V_mDM1000} for an example of \mMed=1~\tev 10~\gev $<\mDM<$ 300~\gev. The cross section decreases as the \mDM approaches $\mMed/2$. A coarse binning along $\mDM$ is sufficient.
+\item[On-shell:] When $\Mmed \gg 2 \mDM$, most mediators are on-shell. The hardness of the ISR is set by \Mmed, and the kinematic distributions do not strongly depend on \mDM. This is illustrated in Fig.~\ref{fig:monojet_scan_V_mDM1000} for an example of \mMed=1~\tev 10~\gev $<\mDM<$ 300~\gev. The cross section decreases as the \mDM approaches $\mMed/2$. A coarse binning along $\mDM$ is sufficient.
 \item[Threshold:] When $\Mmed \approx 2\mDM$, the production is resonantly enhanced, and both the cross section and kinematic distributions change more rapidly as a function of the two masses, and finer binning is needed in order to capture the changes.
 \item[Off-shell:] When $\Mmed \ll 2 \mDM$, the Dark Matter pair is produced by an off-shell mediator. The mediator propagator gives an explicit suppression of $(\Mmed/Q)^2$ that suppresses hard ISR. The $\mDM=1$~\tev case, shown in Fig.~\ref{fig:monojet_scan_V_mDM1000}, and Figure\,\ref{fig:monojet_scan_V_mDM100} demonstrates that the \MET spectrum hardens with increasing \mDM, accompanied by the gradual decrease of the cross section. Due to the significant cross section suppression, it is not necessary to fully populate the parameter space. Imminent LHC searches are not expected to be sensitive to these signals.
 \end{itemize}
@@ -278,8 +278,8 @@ For a fixed mediator mass \mMed and couplings, the Dark Matter mass falls into t
 
 \subsubsection{Scan over the mediator mass}
 
-Changing the mediator mass for fixed Dark Matter mass and couplings leads to significant differences in cross section and shapes of the kinematic variables for on-shell production, as shown in Fig.\,\ref{fig:monojet_scan_V_mMed10}. As expected, higher mediator masses lead to harder $\MET$ spectra.
-On the other hand, the $\MET$ shapes are similar in the off-shell Dark Matter production regime.  This
+Changing the mediator mass for fixed Dark Matter mass and couplings leads to significant differences in cross section and shapes of the kinematic variables for the on-shell regime, as shown in Fig.\,\ref{fig:monojet_scan_V_mMed10}. As expected, higher mediator masses lead to harder $\MET$ spectra.
+On the other hand, the $\MET$ shapes are similar for off-shell mediators.  This
 is illustrated in Fig.\,\ref{fig:monojet_scan_V_mMed1000}. Therefore, a coarse binning in \mMed is sufficient in the off-shell regime.
 
 \begin{figure*}
@@ -306,7 +306,7 @@ The samples with pure vector and pure axial-vector couplings are compared for $\
 Dark Matter masses in Fig.\,\ref{fig:monojet_VAmodels}. %The minimal width between the samples with the same Dark Matter and mediator masses differ only at the percent level.
 No differences in the shape of the \MET distributions are observed between the samples with coincident masses. 
 %\Todo{Do we want to propose to generate one model only and refer to the cross section tables in HEPData repository for the other?}
-In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and beyond into the off-shell production regime, the relative difference between the cross sections of the two samples is increasing, with the vector samples having larger cross sections. 
+In the case of the on-shell mediators, where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and further into the off-shell regime, the relative difference between the cross sections of the two samples is increasing, with the vector ones having larger cross sections. 
 %{This can be understood in the eikonal approximation since the A terms have an additional $v^2$ in front.}
 
 \begin{figure*}
@@ -316,12 +316,12 @@ In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, t
 	\label{fig:monojet_VAmodels}
 \end{figure*}
 
-Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100$~\gev and $\mMed=1\,\tev$, i.e. where the Dark Matter pair is produced on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from
+Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100$~\gev and $\mMed=1\,\tev$, i.e. where the mediator is on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from
 Eq.\,\ref{eq:monojet_min}.
 %In the mediator rest frame, the angular distribution of the DM relative to the mediator direction of motion has the form $1+z^2+2*C*z$, where $z=\cos\theta$, with the second term only present in the mixed case, which may lead to acceptance differences.
-No significant differences between the samples with same type Dark Matter coupling are seen, given the statistical precision of the generated samples. This is expected since the mediator is produced on-shell, and the details of the invisible decay are unimportant in cut-and-count searches.
+No significant differences between the samples with same type Dark Matter coupling are seen, given the statistical precision of the generated samples. This is expected since the mediator is on-shell, and the details of the invisible decay are unimportant in cut-and-count searches.
 
-For the off-shell Dark Matter pair production, shown in Fig.\,\ref{fig:monojet_scan_VA_mMed100} for $\mDM=100$~\gev and $\mMed=100$~\gev,
+For the off-shell case, shown in Fig.\,\ref{fig:monojet_scan_VA_mMed100} for $\mDM=100$~\gev and $\mMed=100$~\gev,
 there is approximately a factor 2 difference
 between the cross-sections of the samples with pure couplings is observed. As in the previous case, the samples with the same type coupling to Dark Matter are similar both in terms of cross sections and \MET shape. Since the contribution to the mediator width from Dark Matter is closed in this case, only the quark couplings define the width. Only couplings to light quarks are opened in the case of $\mMed=100$~\gev for which the differences between the partial widths of vector and axial-vector couplings are marginal. This explains the similar minimal widths for all four samples stated in Fig.\,\ref{fig:monojet_scan_VA_mMed100}.
 
@@ -415,7 +415,7 @@ decaying to Dirac DM fermions in the V and A case, taking the minimum width for 
 %% We choose to display the results in the $\mMed$--$\mDM$ plane for the choice of the couplings $\gq=\gDM=1$. 
 
 
-Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed for vector and axial-vector \schannel models, respectively. The numbers range from $\sim0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\sim0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
+Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed for vector and axial-vector \schannel models, respectively. The numbers range from $\sim0.02$ in the off-shell regime at $2\mDM>\mMed$ to $\sim0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
 
 \begin{table}
 	\centering
@@ -552,7 +552,6 @@ where $\phi$ and $a$ are respectively the scalar and pseudoscalar mediators, and
 
 The couplings to fermions are proportional to the SM Higgs couplings, yet one is still allowed to adjust an overall strength of the coupling to charged leptons and the relative couplings of $u$- and $d$-type quarks. As in the preceding sections, for the sake of simplicity and straightforward comparison, we reduce the couplings to the SM fermions to a single universal parameter $\gq \equiv g_u = g_d = g_\ell$. Unlike the vector and axial-vector models, the scalar mediators are allowed to couple to leptons.\sidenote{This contribution plays no role for most of the parameter space considered. The choice to allow lepton couplings follows Refs.~\cite{Buckley:2014fba,Harris:2014hga}.}
 
-
 The relative discovery and exclusion power of each search can be compared in this framework.
 However, we again emphasize the importance of searching the
 full set of allowed channels in case violations of these simplifying assumptions
@@ -592,7 +591,7 @@ with one parton.
 %\end{align}
 %where $v=246$~\gev denotes the Higgs vacuum expectation value.
 
-The minimal mediator width is given by %Eq.\,\ref{eq:monojet_min},
+The minimal mediator width (neglecting the small contributions from quarks other than top in the loop) is given by %Eq.\,\ref{eq:monojet_min},
 \begin{fullwidth}
   \begin{equation} \label{eq:width}
     \begin{split}
@@ -695,7 +694,7 @@ in order to decide on the optimized parameter grid for the presentation of Run-2
 %, fig:monojet_scan_S_mDM1000,fig:monojet_scan_S_mDM100, fig:monojet_scan_S_mMed10, 
 \ref{fig:monojet_scan_S_mMed1000} show the scans over the couplings, Dark Matter mass and mediator mass and the same conclusions apply as in Section\,\ref{sec:monojet_V}.
 
-A scan over the mediator mass is shown in Fig.\,\ref{fig:monojet_scan_S_mMed1000} where \mMed = 300~\gev and 500~\gev are chosen to be below and above $2m_t$. The off-shell Dark Matter production regime is assumed by taking an extreme limit ($\mDM=1$~\tev) in order to study solely the effects of the couplings to quarks. 
+A scan over the mediator mass is shown in Fig.\,\ref{fig:monojet_scan_S_mMed1000} where \mMed = 300~\gev and 500~\gev are chosen to be below and above $2m_t$. The off-shell case is assumed by taking an extreme limit ($\mDM=1$~\tev) in order to study solely the effects of the couplings to quarks. 
 No differences in the kinematic distributions are observed and also the cross sections remain similar in this case. No significant changes appear for mediator masses around the $2m_t$ threshold.
 
 \begin{figure*}[!htbp]
@@ -798,7 +797,7 @@ decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the mi
 % \end{figure}
 
 
-For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\sim0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
+For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell regime, the ratio is $\sim0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where the mediator is off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
 
 
 \begin{table}
@@ -922,19 +921,19 @@ The studies in this section employ the \powheg~\cite{Haisch:2015ioa} generator.
 
 The propagator for the \schannel exchange is written in a Breit-Wigner
 form as $\displaystyle \frac{1}{q^2-\mMed^2 + i\mMed\Gamma}$, where $q$ is the momentum transfer calculated from the two partons entering the hard process after the initial state radiation, which is equivalent to the momentum of the Dark Matter pair~\footnote{Using a running width and replacing the denominator of the propagator with $q^2 - \mMed^2 + \complexi\,Q^2\,\frac{\Gamma}{\mMed}$ should be considered in the case of wide mediators~\cite{Bardin:1989qr}.}. %The relative size of the center-of-mass energy defined by the two partons entering the hard process and the mediator mass allows us to classify the production in the following way:
-The size of the momentum transfer with respect to the mediator mass allows us to classify the production in the following way:
+The size of the momentum transfer with respect to the mediator mass allows us to identify three cases:
 \begin{itemize}
-	\item off-shell production when $q^2 \gg \mMed^2$ leading to suppressed cross sections,
-	\item on-shell production when $q^2 \sim \mMed^2$ leading to enhanced cross sections,
+	\item off-shell mediator, when $q^2 \gg \mMed^2$ leading to suppressed cross sections,
+	\item on-shell mediator, when $q^2 \sim \mMed^2$ leading to enhanced cross sections,
 	\item effective field theory (EFT) limit when $q^2 \ll \mMed^2$.
 \end{itemize}
 %All three categories can be distinguished in Fig.\,\ref{fig:monojet_MstarMmed} showing the upper limit on the interaction scale $M^{*} \equiv \mMed/\sqrt{\gq\gDM}$ for vector mediator. 
-In the case of the off-shell production and the EFT limit, the first and second term in the propagator dominate, respectively, which reduces the dependence on the mediator width. Therefore, in these cases one can approximate the cross section as
+In the case of the off-shell mediator and the EFT limit, the first and second term in the propagator dominate, respectively, which reduces the dependence on the mediator width. Therefore, in these cases one can approximate the cross section as
 
 \begin{equation}
 \sigma \propto \gq^2\gDM^2.
 \end{equation}
-The on-shell production regime is the most interesting one as it gives the best chances for a discovery at the LHC given the cross section enhancement. The propagator term with the width cannot be neglected in this case and, in the narrow width approximation which requires $\Gamma \ll \mMed$ (this is not necessarily the case in the benchmarks considered in the scans), one can integrate
+The on-shell regime is the most interesting one as it gives the best chances for a discovery at the LHC given the cross section enhancement. The propagator term with the width cannot be neglected in this case and, in the narrow width approximation which requires $\Gamma \ll \mMed$ (this is not necessarily the case in the benchmarks considered in the scans), one can integrate
 
 \begin{equation}
 \int \frac{ds}{(s-\mMed^2)^2 + \mMed^2\Gamma^2} = \frac{\pi}{\mMed\Gamma}
