--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -1,6 +1,6 @@
 Models of bottom-flavored Dark Matter that are closely related to the \tchannel mediated model from this 
 Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. 
-Here, DM couples preferentially to bottom quarks, with a decoupled third generation. 
+%Here, DM couples preferentially to bottom quarks, with a decoupled third generation. 
 We describe the $b$-FDM model of Ref.~\cite{Agrawal:2014una}, created to explain the Galactic Center (GC) 
 gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite{Daylan:2014rsa,Calore:2014xka}. 
 This model favors couplings to third-generation quarks via Yukawa couplings, 
