--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -204,7 +204,7 @@ all other elements of the matrices and vectors above being set to zero.
      \be
        \lag =
          \bigg[
-             a V_\mu \bar u \gmu P_R \gamma_5 \Big] t
+             a V_\mu \bar u \gmu P_R t
            + \lambda \varphi \bar d^c P_R s
            + y \varphi \bar \chiDM P_R t
            +  {\rm h.c.} \ ,
