--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -64,7 +64,7 @@ This diagram contains 2 insertions of EW symmetry breaking fields,
 corresponding in form to the effective dimension-5 operator in Section~\ref{sub:EW_EFT_Dim5}.
 
 
-\section{Inert 2HDM Model}\label{sec:i2HDM}
+\section{Inert two-Higgs Doublet Model (IDM)}\label{sec:i2HDM}
 
 For most of the simplified models included in this report, the mass of
 the mediator and couplings/width are non-trivial parameters of the
@@ -84,10 +84,20 @@ Considering both the simplified model and other elements necessary for a consist
 Consistent Dark Matter (MCDM) models. MCDM models are at the same time still toy models that can be 
 easily incorporated into a bigger BSM model and explored via
 complementary constraints from collider and direct/indirect DM search
-experiments as well as relic density constraints. We discuss this model here both on its own merits and as an example of the flexibility of the simplified model approach.
+experiments as well as relic density constraints. 
 
-The idea of an inert Two-Higgs Doublet Model (i2HDM) was introduced
-more than 30 years ago in~\cite{Deshpande:1977rw,LopezHonorez:2006gr,Dolle:2009fn,Goudelis:2013uca,Belyaev:2015tap}. It is an extension of the SM with a second scalar doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, under which $\phi_2$ is odd and all the other fields are even. 
+%We discuss this model here both on its own merits and as an example of the flexibility of the simplified model approach.
+
+%The idea of an Inert two-Higgs Doublet Model (IDM) was introduced more than 30 years ago in \cite{IDMfirst}. The IDM was first proposed as a dark matter model in \cite{IDMnaturalness} and its DM phenomenology was further studied in \cite{IDMarchetype,
+%ScalarMultiplet,IDMnewviable,IDMgammalines,}. 
+
+
+The idea of an inert Two-Higgs Doublet Model (IDM) was introduced
+more than 30 years ago in Ref~\cite{Deshpande:1977rw}. The IDM was
+first proposed as a Dark Matter model in Ref.~\cite{IDMnaturalness} and its
+phenomenology further studied in Refs.~\cite{LopezHonorez:2006gr,ScalarMultiplet,IDMnewviable,IDMgammalines,Dolle:2009fn,ATL-PHYS-PUB-2014-007IDMnu1,IDMnu2,IDMpos,IDMVIB,Goudelis:2013uca,Belyaev:2015tap}. It is an extension of the SM with a second scalar 
+doublet $\phi_2$ with no direct coupling to fermions.  This doublet has a discrete $Z_2$ symmetry, 
+under which $\phi_2$ is odd and all the other fields are even. 
 The Lagrangian of the odd sector is,
 \begin{equation}
   \mathcal{L} = \frac{1}{2}(D_{\mu}\phi_2)^2 -V(\phi_1,\phi_2)
@@ -117,14 +127,7 @@ where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carryi
   \end{pmatrix}
 \end{equation}
 
-In addition to the SM, i2HDM brings four more degrees of
-freedom coming from the inert doublet in the form of $Z_2$-odd charged
-scalar $\textrm{h}^\pm$ and two neutral $Z_2$-odd scalars
-$\textrm{h}_1$ and $\textrm{h}_2$. The lightest neutral scalar, $h_1$
-is identified as the dark matter candidate. The i2HDM model has been explored at the
-phenomenological level from the perspective of collider DM searches
-\cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela, Belyaev:2015tap}. This model could produce \MET+jet, Z, and Higgs as well as \MET+VBF signatures at the LHC (see Figs.~\ref{fig:fdmonojet1}--\ref{fig:fdvbf}).
-%(see Figs.~\ref{fig:fdmonojet1,fig:fdmonojet2,fig:fdmonoZ,fig:fdmonoH1,fig:fdmonoH2,fig:fdvbf}).
+In addition to the SM, the IDM introduces four more degrees of freedom coming from the inert doublet in the form of a $Z_2$-odd charged scalar $h^\pm$ and two neutral $Z_2$-odd scalars $h_1$ and $h_2$. The lightest neutral scalar, $h_1$ is identified as the dark matter candidate. Aspects of the IDM collider phenomenology have been studied in \cite{Burgess:2000yq, Andreas:2008xy, Arhrib:2013ela, Belyaev:2015tap,IDMnaturalness,IDMLEPII,IDMLHChinvfirst,IDMdileptons1,IDMtrileptons,IDMmultileptons,IDMhgaga1,IDMhgaga2,IDMposthiggs,IDMdileptonsII}. Its LHC signatures include dileptons \cite{IDMdileptons1,IDMdileptonsII}, trileptons \cite{IDMtrileptons} and multileptons \cite{IDMmultileptons} along with missing transverse energy, modifications of the Higgs branching ratios \cite{IDMhgaga1,IDMhgaga2,Goudelis:2013uca}, as well as $\slashed{E}_T + \rm{jet}$, Z, and Higgs and $\slashed{E}_T + \rm{VBF}$ signals (see Figs.~\ref{fig:fdmonojet1}--\ref{fig:fdvbf}).
 
 \begin{figure}
 \includegraphics[width=\textwidth]{figures/EW/i2HDM/fd-mono-j1.pdf} 
@@ -163,17 +166,8 @@ fusion process, adapted from \cite{Belyaev:2015tap}.}
 \label{fig:fdvbf}
 \end{figure}
 
-An experimental analysis of the parameter space has recently been
-performed in Ref.~\cite{Belyaev:2015tap}. The authors of that study
-have implemented the model in CalcHEP and micrOMEGAs and propose a set
-of benchmark points (Table.~\ref{tab:i2HDMbenchMarks}). Though the
-overall parameter space of i2HDM is 5-dimensional, the parameter space
-relevant to a specific LHC signature is only 1-2 dimensional. In the
-mono-jet case, one can use two separate simplified models, a
-$gg\to h_1 h_1+g$ process (via Higgs mediator) and a
-$q\bar{q}\to h_1 h_2+g$ ($gq\to h_1 h_2+q$) process (using Z-boson
-mediator) to capture the physics relevant to the search. The cross sections for the 
-various signatures produced by this model are displayed in Fig.~\ref{fig:i2HDM_xsecs}.
+Based on the various LHC search channels, DM phenomenology issues and theoretical considerations, numerous works have proposed benchmark scenarios for the IDM, see e.g. \cite{IDMmultileptons,Goudelis:2013uca} while a FeynRules implementation (including MadGraph, CalcHEP and micrOMEGAs model files) was provided in \cite{IDMmultileptons}. An updated analysis of the parameter space has recently been performed in Ref. Ref.~\cite{Belyaev:2015tap}. The authors of that study have re-implemented the model in CalcHEP and micrOMEGAs and propose an additional set of benchmark points, mostly inspired by mono-$X$ and VBF searches (Table.~\ref{tab:IDMbenchMarks}). Though the overall parameter space of IDM is 5-dimensional, once all relavant constraints are applied the parameter space relevant to a specific LHC signature typically reduces to 1-2 dimensional. In the mono-jet case, one can use two separate simplified models, a $gg \rightarrow h_1 h_1 + g$ process (via Higgs mediator) and a $qq \rightarrow h_1 h_2 + g (gq \rightarrow h_1 h_2 + q)$ process (through a Z-boson mediator) to capture the physics relevant to the search.
+The cross sections for the various mono-$X$ and VBF signatures produced by this model are displayed in Fig.~\ref{fig:IDM_xsecs}.
 
 \begin{table*}[htb]
   \fontfamily{ppl}\selectfont
@@ -192,14 +186,14 @@ various signatures produced by this model are displayed in Fig.~\ref{fig:i2HDM_x
     $\sigma_{LHC}$ (fb)     & $1.7 \times 10^{2}$ &  $7.7 \times 10^{2}$  & $4.3 \times 10^{-2}$  & $1.2 \times 10^{-1}$  &  $2.3 \times 10^{-2}$ \\
     \bottomrule
   \end{tabular}
-  \caption[][-92pt]{Five benchmarks for i2HDM in  ($M_{h_{1}},M_{h_{2}},M_{h_{\pm}},\lambda_{2},\lambda_{345}$) parameter space. We also present the corresponding relic density ($\Omega_{h^2}$), the spin-independent cross section for DM scattering on the proton, and the LHC cross section at 13~\tev for mono-jet process $pp\to h_1,h_1+jet$ for $p_T^{jet}>100$~\gev cut.}
-  \label{tab:i2HDMbenchMarks}
+  \caption[][-92pt]{Five benchmarks for IDM in  ($M_{h_{1}},M_{h_{2}},M_{h_{\pm}},\lambda_{2},\lambda_{345}$) parameter space. We also present the corresponding relic density ($\Omega_{h^2}$), the spin-independent cross section for DM scattering on the proton, and the LHC cross section at 13~\tev for mono-jet process $pp\to h_1,h_1+jet$ for $p_T^{jet}>100$~\gev cut.}
+  \label{tab:IDMbenchMarks}
 \end{table*}
 
 \begin{figure}[htb]
 	\includegraphics[width=\textwidth]{figures/EW/i2HDM/i2HDM_crossSections.pdf} 
 	\caption{LHC cross section at 13~\tev for various signatures, from \cite{Belyaev:2015tap}.}
-	\label{fig:i2HDM_xsecs}
+	\label{fig:IDM_xsecs}
 \end{figure}
 \clearpage
 
